@@ -1,5 +1,14 @@
 2007-10-24  Peter Jones  <pjones@redhat.com>
 
+	* pykickstart/commands/logvol.py: make all the parse methods
+	inheritable, and only define them once.
+
+	* pykickstart/commands/partition.py: ditto.
+
+	* pykickstart/commands/raid.py: ditto.
+
+2007-10-24  Peter Jones  <pjones@redhat.com>
+
 	* pykickstart/handlers/f9.py: new for f9!
 
 	* pykcikstart/handlers/control.py: add F9 stuff.
